add link styling

--- a/module-0-fundementals-recap.html
+++ b/module-0-fundementals-recap.html
@@ -9,11 +9,17 @@
   <body>
     <h1>Fundamentals Recap</h1>
 
-    <h2>Anatomy of a CSS Style Rule</h2>
+    <h2 id="anatomy-of-a-css-style-rule">
+      <a href="/module-0-fundementals-recap.html#anatomy-of-a-css-style-rule"
+        >Anatomy of a CSS Style Rule</a
+      >
+    </h2>
 
-    <a href="https://courses.joshwcomeau.com/css-for-js/00-recap/02-anatomy"
-      >Lesson</a
-    >
+    <external-link>
+      <a href="https://courses.joshwcomeau.com/css-for-js/00-recap/02-anatomy"
+        >Lesson</a
+      >
+    </external-link>
 
     <pre>
 .error-text {
@@ -38,10 +44,12 @@
 
     <h2>Media Queries</h2>
 
-    <a
-      href="https://courses.joshwcomeau.com/css-for-js/00-recap/03-media-queries"
-      >Lesson</a
-    >
+    <external-link>
+      <a
+        href="https://courses.joshwcomeau.com/css-for-js/00-recap/03-media-queries"
+        >Lesson</a
+      >
+    </external-link>
 
     <p>
       To allow our UI to work across a variety of screen sizes from large
@@ -95,10 +103,12 @@
 
     <h2>Selectors</h2>
 
-    <a
-      href="https://courses.joshwcomeau.com/css-for-js/00-recap/04.01-selectors"
-      >Lesson</a
-    >
+    <external-link>
+      <a
+        href="https://courses.joshwcomeau.com/css-for-js/00-recap/04.01-selectors"
+        >Lesson</a
+      >
+    </external-link>
 
     <p>
       CSS now comes with a vast amount of selectors that can be mixed and have
@@ -142,10 +152,12 @@ button:hover {
 
     <h2>Pseudo-elements</h2>
 
-    <a
-      href="https://courses.joshwcomeau.com/css-for-js/00-recap/04.02-pseudo-elements"
-      >Lesson</a
-    >
+    <external-link>
+      <a
+        href="https://courses.joshwcomeau.com/css-for-js/00-recap/04.02-pseudo-elements"
+        >Lesson</a
+      >
+    </external-link>
 
     <p>
       Pseudo-elements don't target state,
@@ -178,10 +190,12 @@ input::placeholder {
 
     <h2>Combinators</h2>
 
-    <a
-      href="https://courses.joshwcomeau.com/css-for-js/00-recap/04.03-combinators"
-      >Lesson</a
-    >
+    <external-link>
+      <a
+        href="https://courses.joshwcomeau.com/css-for-js/00-recap/04.03-combinators"
+        >Lesson</a
+      >
+    </external-link>
 
     <p>
       We can combine multiple selectors using combinators to be more specific
