--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <h1>Index</h1>
+    <ul>
+      <li><a href="module-0-fundementals-recap.html">Fundamentals Recap</a></li>
+      <li><a href="module-1-rendering-logic.html">Rendering Logic</a></li>
+    </ul>
   </body>
 </html>
