--- a/module-0-fundementals-recap.html
+++ b/module-0-fundementals-recap.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./reset.css" />
+    <meta name="robots" content="noindex" />
   </head>
   <body>
     <h1>Fundamentals Recap</h1>
